--- a/platformio.ini
+++ b/platformio.ini
@@ -15,11 +15,13 @@ framework=arduino
 upload_resetmethod = nodemcu
 upload_speed = 115200
 build_flags = -lespnow
+upload_port = /dev/tty.SLAB_USBtoUART
 
 
 lib_deps =
      # Depend on specific version
      Task@1.1.4
+
 
 [platformio]
 src_dir=kadyai-controller-esp8266
