--- a/lib/xCMMC_BootMode/.travis.yml
+++ b/lib/xCMMC_BootMode/.travis.yml
@@ -47,39 +47,19 @@
 # language: python
 # python:
 #     - "2.7"
-
+#
 # sudo: false
 # cache:
 #     directories:
 #         - "~/.platformio"
-
+#
 # env:
-#     - PLATFORMIO_CI_SRC=examples/example1
-
+#     - PLATFORMIO_CI_SRC=path/to/test/file.c
+#     - PLATFORMIO_CI_SRC=examples/file.ino
+#     - PLATFORMIO_CI_SRC=path/to/test/directory
+#
 # install:
 #     - pip install -U platformio
-
+#
 # script:
 #     - platformio ci --lib="." --board=ID_1 --board=ID_2 --board=ID_N
-
-
-language: python
-python:
-    - "2.7"
-cache:
-    directories:
-        - "~/.platformio"
-env:
-    - PLATFORMIO_CI_SRC=examples/example1
-    # - PLATFORMIO_CI_SRC=examples/basic_mqtt
-    # - PLATFORMIO_CI_SRC=examples/basic_dht
-install: 
-    # - wget https://github.com/adafruit/Adafruit_Sensor/archive/master.zip -O /tmp/adafruit_sensor.zip
-    # - unzip /tmp/adafruit_sensor.zip -d /tmp
-    - pip install -U platformio
-    # - platformio lib -g install 31 166 19 31
-script:
-    - mkdir /tmp/build
-    - platformio ci --build-dir="/tmp/build" --keep-build-dir --lib="." --board=espresso_lite_v2
-    - find /tmp/build
-    # - platformio ci --project-option="lib_ldf_mode=2" --lib="." --board=nano32
