--- a/platformio.ini
+++ b/platformio.ini
@@ -13,14 +13,17 @@ platform=espressif8266
 board=espresso_lite_v2
 framework=arduino
 upload_resetmethod = nodemcu
-upload_speed = 115200
-build_flags = -lespnow
+upload_speed = 480600
 upload_port = /dev/tty.SLAB_USBtoUART
+build_flags = -lespnow -DDEBUG_ESP_PORT=Serial -DDEBUG_ESP_CORE -DDEBUG_ESP_SSL -DDEBUG_ESP_WIFI -DDEBUG_ESP_HTTP_CLIENT -DDEBUG_ESP_HTTP_UPDATE -DDEBUG_ESP_HTTP_SERVER -DDEBUG_ESP_UPDATER -DDEBUG_ESP_OTA -DDEBUG_TLS_MEM
+monitor_speed = 115200
+
 
 
 lib_deps =
      # Depend on specific version
-     Task@1.1.4
+     Task
+     ArduinoJson@6.15.2
 
 
 [platformio]
