--- a/platformio.ini
+++ b/platformio.ini
@@ -21,10 +21,10 @@ monitor_speed = 115200
 
 
 lib_deps =
-     # Depend on specific version
      Task
      ArduinoJson@6.15.2
 
 
 [platformio]
 src_dir=controller-esp8266
+; src_dir=slave-esp8266
