--- a/platformio.ini
+++ b/platformio.ini
@@ -26,5 +26,5 @@ lib_deps =
 
 
 [platformio]
-; src_dir=controller-esp8266
-src_dir=slave-esp8266
+src_dir=controller-esp8266
+; src_dir=slave-esp8266
